ON-15852: use unbound work queue
ON-16018: add sfcaffinity_config support for ecores
ON-16076: X3: don't restrict EF_SHARED_RXQ_NUM to first 8 queues.
ON-16130: drop aux bus handle on device unplug, avoiding kernel crash
ON-16132: rpm, deb: detect cplane user/group error and fail installation early
ON-16144: fix race in VI allocation over aux bus, avoiding kernel crash


onload-9.0.0.39
---------------

Update sfc net driver to v6.0.1.1000

Remove support for:
 - Red Hat Enterprise Linux 7
 - Red Hat Enterprise Linux 8.4 - 8.5
 - Red Hat Enterprise Linux 9.0 - 9.1
 - Canonical Ubuntu Server LTS 20.04
 - SuSE Linux Enterprise Server
 - Debian 11 "Bullseye"
 - kernel.org Linux kernels up to 5.10

Changes:

ON-1440: create stable control plane API, available for ef_vi apps
ON-5162: add DKMS package for Debian
ON-6842: add ef_vi bonding example using new control plane API
ON-13142: implement SOF_TIMESTAMPING_OPT_PKTINFO
ON-13143: onload_extension: support SCM_TIMESTAMPING_PKTINFO CMSG on transmit
ON-14137: allow time to drain outstanding events on stack shutdown
ON-14317: add interrupt assignment information to vi stackdump output
ON-14346: EF_VI non-root applications can be permitted to use MAC filters
ON-14517: improve filter handling during NIC reset
ON-14692: X3: support extended design parameter set
ON-14725: onload_extension: add onload_socket_tx_only function
ON-14825: poll interfaces cyclically for fairer handling of received data
ON-14833: add EF_TCP_RST_COOLDOWN to rate-limit TCP RSTs selectively
ON-15106: X3: set filter support based on reported hardware capabilities
ON-15163: add ef_vi transmit warming interface and example
ON-15289: replace driverlink with Linux aux bus for net driver coordination
ON-15368: block in move_fd instead of returning EBUSY randomly
ON-15451: onload_extension: pass fractional nanosecond timestamps from hardware
ON-15489/#145/156/196/218: fix various DKMS issues